--- a/css/RWD.css
+++ b/css/RWD.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 
 /* ====================== Header  ======================*/
 
@@ -133,15 +137,14 @@
 
   .hamburgerWrapper .menu {
     padding: 0;
+    scale: 0.7;
   }
 
-  .bar{
-    /* scale: 0.8; */
-  }
+
 
   .cart-panel {
     width: 80vw; 
-    max-width: 350px;
+    max-width: 450px;
   }
 
   .cart-panel-wrapper.active .cart-panel {
@@ -182,23 +185,29 @@
     padding: 0 10px;
     justify-content: center;
     padding-inline-start: 20px;
+    padding-right: 50px;
   }
 
   .header-logo-wrapper{
-    scale: 0.8;
+    scale: 1;
   }
   
   .header-fixed {
     position: absolute;
     right: 0;
     top: 16px;
-    scale: 0.8;
+    scale: 0.7;
     
   }
 
   .header-fixed .hamburgerWrapper{
-    scale: 0.75;
-    padding-top: 8px;
+    scale: 0.65;
+    padding-top: 4px;
+  }
+
+  .menu ul {
+    width: 400px;
+    max-width: 95vw;
   }
 
 }
@@ -236,6 +245,16 @@
 
 /* 820 */
 @media (max-width: 820px) {
+
+  header {
+    max-width: 100vw !important;
+    width: 100% !important;
+  }
+
+  .p5pic, 
+  img {
+    max-width: 100% !important;
+  }
 
   .wrapper-p1 {
     display: block;
@@ -350,7 +369,7 @@
 
   .wrapper-p1 .pr2 {
     font-size: 1em;
-    margin-bottom: 16px;
+    margin-bottom: 40px;
   }
 
   .wrapper-p1 .herop1button{
@@ -383,15 +402,104 @@
     display: ;
   }
 }
+/* 393 */
+@media screen and (max-width: 393px){
+  
+  .wrapper-p1 .pr1 {
+    font-size: 1em;
+  }
+
+  .aside-circle-dots {
+    scale: 0.8;
+  }
+
+
+}
+
 /* P2 */
+/* 1100 */
+@media (max-width: 1100px) {
+  .wrapper-p2 .p2-l .pr2,
+  .wrapper-p2 .p2-l .pr3 {
+  font-size: 0.9em;
+  }
 
-/* 820*/
+}
+
+/* 820 */
+@media (max-width: 820px) {
+  .wrapper-p2-text{
+    display: none;
+  }
+
+  .wrapper-p2 .p2-r .p2imgr {
+   height: 100%;
+   object-fit: cover;
+   object-position: center 85%;
+  }
+
+  .wrapper-p2 {
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0;
+    margin-bottom: 100px;
+    position: relative;
+    min-height: 700px;
+  }
+
+  .wrapper-p2 .p2-l {
+    order: 2;
+    width: calc(100% - 40px);
+    max-width: 500px;
+    position: absolute;
+    left: -140px;
+    top: 280px;
+    transform: translateY(-50%);
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .wrapper-p2 .p2-r {
+    order: 1;
+    width: 100%;
+    max-width: 820px;
+    margin-top: 0;
+    height: 600px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .wrapper-p2 .p2-l .pr1{
+    text-shadow: 2px 2px 4px var(--color1), 4px 4px 8px rgba(0, 0, 0, 0.15);
+  }
+
+  .wrapper-p2 .p2-l .pr2,
+  .wrapper-p2 .p2-l .pr3{
+    text-shadow: 2px 2px 4px var(--color1), 4px 4px 8px rgba(0, 0, 0, 0.15);
+  }
 
 
+  .wrapper-p2 .p2-l .pr3 {
+    margin-bottom: 200px;
+  }
+
+  .wrapper-p2 .p2-l .herop2button {
+    position: absolute;
+
+  }
+
+
+}
 
 
 /* 440 */
-
+@media (max-width: 440px) {
+  .wrapper-p2 .p2-r .p2imgr {
+    height: 140%; 
+  }
+}
 
 
 
